--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@popovmp/read-json",
-    "version": "1.0.2",
-    "description": "Reads a JSON file. Supports UTF8, UTF16, BOM",
-    "keywords": ["JSON", "BOM","UTF8", "UTF16"],
+    "version": "1.1.0",
+    "description": "Reads and parses a JSON file. Supports ASCII, UTF8, UTF16, BOM",
+    "keywords": ["JSON", "BOM", "ASCII", "UTF8", "UTF16"],
     "main": "index.js",
     "license": "MIT",
     "repository": {
